Renamed classes. Fixed group title spacing. Prepared js classes. Changed checkbox / label alignement.

--- a/assets/main.css
+++ b/assets/main.css
@@ -34,10 +34,15 @@ html {
     box-sizing: border-box;
 }
 
+button {
+    margin-bottom: 1em;
+}
+
 input[type="checkbox"] {
     margin-right: calc(0.4em + var(--base-font-size) * 0.1);
     position: relative;
-    bottom: -0.2em;}
+    bottom: 0.2em;
+}
 
 .flex-container {
     display: flex;
@@ -48,7 +53,7 @@ input[type="checkbox"] {
     vertical-align: baseline;
 }
 
-.bubble-container {
+.list-group {
     flex: auto;
     flex-direction: column;
     overflow: hidden;
@@ -62,7 +67,7 @@ input[type="checkbox"] {
     vertical-align: var(--vertical-align);
 }
 
-.reminder-item {
+.list-element {
     flex: auto;
     flex-direction: row;
     display: flex;
@@ -74,13 +79,13 @@ input[type="checkbox"] {
     vertical-align: var(--vertical-align);
 }
 
-.reminder-checkbox {
+.button-checkbox {
     display: inline-block;
     overflow: hidden;
     vertical-align: var(--vertical-align);
 }
 
-.reminder-text {
+.element-text {
     display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -96,13 +101,16 @@ input[type="checkbox"] {
     font-family: "Comfortaa", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    writing-mode: horizontal-tb;
+    margin-block-start: auto;
+    margin-block-end: 0.8em;
     hyphens: auto;
     white-space: normal;
     color: var(--text-color);
     line-height: 1.6;
 }
 
-.text-heading {
+.text-title {
     font-size: 1.2em;
     font-weight: 600;
     /*<weight>: Use a value from 300 to 700*/
